--- a/moodanalyzer/pom.xml
+++ b/moodanalyzer/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bridgelabz</groupId>
-	<artifactId>moodanalyser</artifactId>
+	<artifactId>moodanalyzer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>moodanalyser</name>
+	<name>moodanalyzer</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -21,7 +21,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
